# seer-pas-sdk

./: .env  .gitignore  README.md  SDK_Testscript.html  SDK_Testscript.ipynb  analyses.json  demo.py  pyproject.toml  requirements.txt  sdk.py  setup.cfg  walkthrough.html  walkthrough.ipynb  walkthrough.qmd
.github/workflows/: lint.yml  publish.yml  test.yml
auth/: __init__.py
common/: __init__.py
core/: __init__.py
data/: AgamSDKPlateMapATest.csv  test.csv
docs/: _quarto.yml  index.qmd
objects/: __init__.py
seer_pas_sdk/: __init__.py
seer_pas_sdk/auth/: __init__.py  auth.py
seer_pas_sdk/common/: __init__.py  errors.py  groupanalysis.py
seer_pas_sdk/core/: __init__.py  internal.py  sdk.py  unsupported.py
seer_pas_sdk/objects/: __init__.py  groupanalysis.py  headers.py  platemap.py  volcanoplot.py
testing/: plateMap_5ed1ea30-1f64-11ee-b0c7-93da7d66d141.csv
tests/: conftest.py  test_auth.py  test_common.py  test_objects.py  test_platemap.py  test_sdk.py  unsupported_platemap.py
