[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "seer-pas-sdk"
description = "SDK for Seer Proteograph Analysis Suite (PAS)"
authors = [
	{ name = "Ryan Sun", email = "rsun@seer.bio" },
]
dynamic = ["version"]
keywords = ["seer", "sdk", "pas", "mass spectrometry", "proteomics"]
license = { file = "LICENSE.txt" }
requires-python = ">= 3.8"
readme = "README.md"

dependencies = [
  "boto3>=1.26.152",
  "botocore>=1.29.152",
  "pandas>=2.0.1",
  "numpy>=1.5.3,<2.0.0",
  "PyJWT>=2.8.0",
  "python-dotenv>=1.0.0",
  "Requests>=2.31.0",
  "tqdm>=4.65.0",
  "deprecation"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  #"Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Issues = "https://github.com/seerbio/seer-pas-sdk/issues"

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
