[metadata]
name = pas-python-sdk
author = Agam Jolly
author_email = ajolly@seer.bio
description = SDK for Seer Proteograph Analysis Suite (PAS)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seerbio/pas-python-sdk
project_urls =
    Bug Tracker = https://github.com/seerbio/pas-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3==1.26.152
    botocore==1.29.152
    pandas==2.0.1
    numpy>=1.5.3,<2.0.0
    PyJWT==2.8.0
    python-dotenv==1.0.0
    Requests==2.31.0
    tqdm==4.65.0
